<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zilexsoft.alpininfo.fnuggno.view.OpenHoursActivity"
    >

    <TextView
        android:id="@+id/openHoursHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/HOURS_OF_OPERATION"
        android:textSize="25dp"
        android:textStyle="bold"
        android:typeface="sans" />


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/res_bck"
        android:layout_marginTop="-55dp"/>


    <LinearLayout
        android:id="@+id/oh_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/openHoursHeader"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">


    <TableLayout
        android:id="@+id/oh_tb_header"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_weight="1"
        android:stretchColumns="1"

        >

    <TableRow android:gravity="center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="   "
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/HOURS_FROM"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text=" "
            android:typeface="monospace"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/HOURS_TO"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--<TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Now"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />-->

    </TableRow>
    </TableLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/openHoursList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oh_header_layout"
        />


</RelativeLayout>
